@@ -1,4 +1,4 @@
-.TH GPLINK 1 "2007-10-27" "gputils-0.13.6" "Linux user's manual"
+.TH GPLINK 1 "2007-10-27" "gputils-0.13.7" "Linux user's manual"
 .SH NAME
 gplink \- GNU PIC linker
 .SH SYNOPSIS
