@@ -1,4 +1,4 @@
-.TH GPUTILS 1 "2007-10-27" "gputils-0.13.6" "Linux user's manual"
+.TH GPUTILS 1 "2007-10-27" "gputils-0.13.7" "Linux user's manual"
 .SH NAME
 gputils \- GNU PIC utilities
 .SH DESCRIPTION
